completed blog and started styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,23 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
 html,
 body {
   padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  margin: 1em;
+  font-family: Helvetica, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+h1 {
+  color: text-red-500;
+  font-size: x-large;
 }
 
 a {
   color: inherit;
-  text-decoration: none;
+  text-decoration: dashed;
 }
 
 * {
