--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,18 +1,19 @@
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
-
 html,
 body {
-  padding: 0;
+  padding: 1em;
   margin: 1em;
-  font-family: Helvetica, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: Avenir, Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  
 }
 
 h1 {
-  color: text-red-500;
-  font-size: x-large;
+  font-size: 2em;
+}
+
+h2 {
+  color: #120D31;
 }
 
 a {
@@ -22,4 +23,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+em {
+  color: #777777;
 }
