--- a/styles/index.css
+++ b/styles/index.css
@@ -12,6 +12,24 @@
 @tailwind utilities;
 /* Stop purging. */
 
+@font-face {
+    font-family: 'Avenir';
+    font-style: normal;
+    src: url(/static/fonts/Avenir.ttc) format('ttc');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+      U+FEFF, U+FFFD;
+}
+
+@font-face {
+    font-family: 'Helvetica';
+    font-style: normal;
+    src: url(/static/fonts/HelveticaNeue.ttc) format('ttc');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+      U+FEFF, U+FFFD;
+}
+
 /* Your own custom utilities */
 html {
     background-color: #1e1e1e;
