blog is now responsive

--- a/pages/markdown-styles.module.css
+++ b/pages/markdown-styles.module.css
@@ -1,11 +1,11 @@
 .markdown {
-    @apply text-lg leading-relaxed;
+    @apply max-w-sm md:max-w-screen-md lg:max-w-screen-lg mx-auto;
 }
   
 .markdown p,
 .markdown ul,
 .markdown ol {
-    @apply my-8 text-2xl font-blogpost;
+    @apply my-8 text-xl font-blogpost;
     color: #d6d6d6;
 }
 
@@ -24,7 +24,7 @@
 }
   
 .markdown h1 {
-    @apply text-7xl text-white font-bold mt-12 mb-4 leading-snug;
+    @apply text-3xl md:text-7xl text-white font-bold mt-12 mb-4 leading-snug;
 }
 
 .markdown h2 {
@@ -33,16 +33,16 @@
     border-radius: 10px;
     padding: 8px;
     padding-left: 15px;
-    @apply text-3xl mt-32 font-bold mb-4 leading-snug;
+    @apply text-xl lg:text-3xl mt-32 font-bold mb-4 leading-snug;
 }
   
 .markdown h3 {
     @apply text-2xl mt-8 mb-4 leading-snug;
 }
 
-/* .markdown em {
+.markdown em {
     color: #d2e4ff;
-} */
+}
 
 .markdown code {
     margin-bottom: 30px;
