bold now shows up as main green

--- a/pages/markdown-styles.module.css
+++ b/pages/markdown-styles.module.css
@@ -45,6 +45,15 @@
     color: #d2e4ff;
 }
 
+.markdown strong {
+    color: #aff7d0;
+}
+
+::selection .markdown{
+    color: red;
+    background: yellow;
+  }
+
 .markdown code {
     margin-bottom: 30px;
     color: rgb(243, 54, 54);
