--- a/pages/markdown-styles.module.css
+++ b/pages/markdown-styles.module.css
@@ -15,7 +15,7 @@
 .markdown p,
 .markdown ul,
 .markdown ol {
-    @apply my-8 text-sm xl:text-xl font-blogpost;
+    @apply my-8 text-lg xl:text-xl font-blogpost;
     color: #d6d6d6;
 }
 
@@ -48,7 +48,7 @@
   
 .markdown h3 {
     color: white;
-    @apply text-2xl xl:text-5xl mt-20 mb-3 leading-snug;
+    @apply text-3xl xl:text-5xl mt-20 mb-3 leading-snug;
 
 }
 
