add overflow to code

--- a/pages/markdown-styles.module.css
+++ b/pages/markdown-styles.module.css
@@ -4,12 +4,18 @@
   
 
 .markdown p,
+.markdown pre,
 .markdown h1,
 .markdown h2,
 .markdown h3,
 .markdown h4,
 .markdown h5 {
     @apply mx-4 xl:mx-32;
+}
+
+.markdown pre {
+    /* word-wrap: break-word;  */
+    @apply overflow-scroll overflow-x-auto
 }
 
 .markdown p,
