finished analysis sin miedo

--- a/pages/markdown-styles.module.css
+++ b/pages/markdown-styles.module.css
@@ -1,7 +1,6 @@
 .markdown iframe {
-    @apply max-w-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto;
+  @apply max-w-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto;
 }
-  
 
 .markdown p,
 .markdown pre,
@@ -10,76 +9,82 @@
 .markdown h3,
 .markdown h4,
 .markdown h5 {
-    @apply mx-4 xl:mx-32;
+  @apply mx-4 xl:mx-32;
 }
 
 .markdown pre {
-    /* word-wrap: break-word;  */
-    @apply overflow-scroll overflow-x-auto
+  /* word-wrap: break-word;  */
+  @apply overflow-hidden overflow-x-auto;
+}
+
+.markdown table {
+  @apply table-auto text-white mx-auto text-xl border-separate;
+  border-color: #aff7d0;
+  border-spacing: 150px 16px;
+}
+
+.markdown table thead {
+  @apply text-2xl;
+}
+.markdown table tbody tr {
+  color: #d6d6d6;
 }
 
 .markdown p,
 .markdown ul,
 .markdown ol {
-    @apply my-8 text-lg xl:text-xl font-blogpost;
-    color: #d6d6d6;
+  @apply my-8 text-lg xl:text-xl font-blogpost;
+  color: #d6d6d6;
 }
 
 .markdown blockquote p {
-    @apply italic font-serif text-sm xl:text-xl;
-    color: #1e1e1e;
-    background-color: #aff7d0;
-    border-radius: 10px;
-    padding-left: 15px;
-    padding: 15px;
-
+  @apply italic font-serif text-lg xl:text-xl px-4 py-1 xl:px-10 xl:py-5;
+  color: #aff7d0;
 }
 
 .markdown p {
-    text-align: justify;
+  text-align: justify;
 }
-  
+
 .markdown h1 {
-    @apply  text-5xl md:text-7xl text-white font-bold mt-12 mb-4 leading-snug;
+  @apply text-5xl md:text-7xl text-white font-bold mt-12 mb-4 leading-snug;
 }
 
 .markdown h2 {
-    @apply text-3xl lg:text-6xl text-white border-l-4 p-3 mt-32 font-bold mb-4 leading-snug;
+  @apply text-3xl lg:text-6xl text-white border-l-4 p-3 mt-32 font-bold mb-4 leading-snug;
 }
-  
-.markdown h3 {
-    color: white;
-    @apply text-3xl xl:text-5xl mt-20 mb-3 leading-snug;
 
+.markdown h3 {
+  color: white;
+  @apply text-3xl xl:text-5xl mt-20 mb-3 leading-snug;
+}
+
+.markdown h4 {
+  color: white;
+  @apply text-2xl xl:text-4xl mt-20 mb-3 leading-snug;
 }
 
 .markdown ol {
-    @apply ml-14 mr-4 xl:mx-52 list-decimal text-justify
+  @apply ml-14 mr-4 xl:mx-52 list-decimal text-justify;
 }
 
 .markdown ul {
-    @apply ml-14 mr-4 xl:mx-20 list-disc text-justify
+  @apply ml-14 mr-4 xl:mx-20 list-disc text-justify;
 }
 
 .markdown em {
-    color: #d2e4ff;
+  color: #d2e4ff;
 }
 
 .markdown strong {
-    color: #aff7d0;
+  color: #aff7d0;
 }
-
-::selection .markdown {
-    color: red;
-    background: yellow;
-}
-
 
 .markdown img {
-    @apply mx-auto xl:max-w-full
+  @apply mx-auto xl:max-w-full;
 }
 
 .markdown a {
-    color: #aff7d0;
-    text-decoration: underline;
+  color: #aff7d0;
+  text-decoration: underline;
 }
