--- a/pages/markdown-styles.module.css
+++ b/pages/markdown-styles.module.css
@@ -1,6 +1,9 @@
 .markdown iframe {
   @apply max-w-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto;
 }
+.markdown video {
+  @apply max-w-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto;
+}
 
 .markdown p,
 .markdown pre,
@@ -64,7 +67,7 @@
 }
 
 .markdown ul {
-  @apply ml-14 mr-4 xl:mx-96 list-disc text-justify;
+  @apply ml-11 mr-4 xl:mx-32 list-disc text-justify;
 }
 
 .markdown em {
