--- a/pages/markdown-styles.module.css
+++ b/pages/markdown-styles.module.css
@@ -15,7 +15,8 @@
 .markdown h6,
 .markdown ul,
 .markdown ol {
-  @apply text-white max-w-md xl:max-w-xl mx-auto;
+  @apply text-white;
+  /* @apply max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl mx-auto; */
 }
 
 .markdown h1,
@@ -63,7 +64,7 @@
 }
 
 .markdown h1 {
-  @apply text-6xl xl:text-6xl font-bold mt-12 leading-snug;
+  @apply text-4xl xl:text-6xl font-bold mt-12 leading-snug;
 }
 
 .markdown h2 {
@@ -72,20 +73,20 @@
 
 .markdown h3 {
   color: white;
-  @apply text-3xl xl:text-3xl mt-20 mb-3 leading-snug;
+  @apply text-2xl xl:text-3xl mt-20 mb-3 leading-snug;
 }
 
 .markdown h4 {
   color: white;
-  @apply text-2xl xl:text-2xl mt-20 mb-3 leading-snug;
+  @apply text-xl xl:text-2xl mt-20 mb-3 leading-snug;
 }
 .markdown h5 {
   color: white;
-  @apply text-2xl xl:text-2xl mt-20 mb-3 leading-snug;
+  @apply text-xl xl:text-2xl mt-20 mb-3 leading-snug;
 }
 .markdown h6 {
   color: white;
-  @apply text-2xl xl:text-2xl mt-20 mb-3 leading-snug;
+  @apply text-xl xl:text-2xl mt-20 mb-3 leading-snug;
 }
 
 .markdown ul,
