--- a/pages/markdown-styles.module.css
+++ b/pages/markdown-styles.module.css
@@ -55,7 +55,7 @@
 }
 
 .markdown blockquote p {
-  @apply italic font-serif text-lg xl:text-xl px-4 py-1 xl:px-10 xl:py-5;
+  @apply italic bg-accent-1 bg-opacity-20 border-0 border-accent-1 rounded-xl text-lg xl:text-xl px-4 py-1 xl:px-10 xl:py-5;
   color: #aff7d0;
 }
 
@@ -91,7 +91,7 @@
 
 .markdown ul,
 .markdown ol {
-  @apply text-left xl:text-justify max-w-xs xl:max-w-md;
+  @apply text-left xl:text-justify ml-10;
 }
 
 .markdown ul {
@@ -114,8 +114,35 @@
 }
 
 .markdown a {
+  position: relative;
+  display: inline-block;
+  transition: 0.1s;
+  text-decoration: none;
+  color: #f3f3f3;
+  font-weight: bold;
+}
+
+.markdown a::after {
+  position: absolute;
+  bottom: 0.3em;
+
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 1.5px;
+  background-color: #aff7d0;
+  opacity: 0;
+  transition: 0.1s;
+}
+
+.markdown a:hover::after {
+  bottom: 0;
+  opacity: 1;
   color: #aff7d0;
-  text-decoration: underline;
+}
+
+.markdown a:hover {
+  color: #aff7d0;
 }
 
 .markdown * > code {
