--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;600&display=swap");
@@ -21,17 +20,15 @@ html {
   font-family: "IBM Plex Sans";
 }
 
-/* @font-face {
-  font-family: "IBM Plex Sans";
-  font-style: normal;
-  src: url("/static/fonts/HelveticaNeue.ttc") format("truetype");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-    U+FEFF, U+FFFD;
-} */
-
 /* Your own custom utilities */
-html {
-  background-color: #242424;
+#index {
+  /* background: #0c0c0c; */
+  min-height: 100%;
+  background: radial-gradient(circle, rgb(19, 62, 58) 0%, rgb(5, 35, 30) 68%);
+  background-attachment: fixed;
   scroll-behavior: smooth;
+}
+
+html {
+  background-color: #202020;
 }
