--- a/styles/index.css
+++ b/styles/index.css
@@ -14,15 +14,15 @@
   --size: 110px;
   background-image: repeating-linear-gradient(
       0deg,
-      #fff,
-      #fff 0.1px,
+      #ffffff55,
+      #ffffff55 1px,
       transparent 1px,
       transparent var(--size)
     ),
     repeating-linear-gradient(
       -90deg,
-      #fff,
-      #fff 0.1px,
+      #ffffff55,
+      #ffffff55 1px,
       transparent 1px,
       transparent var(--size)
     ),
@@ -30,7 +30,7 @@
 
   background-size: var(--size) var(--size), var(--size) var(--size), 100% 100%;
 
-  background-blend-mode: overlay, overlay, normal;
+  background-blend-mode: overlay, overlay, overlay;
 
   scroll-behavior: smooth;
 }
