--- a/styles/index.css
+++ b/styles/index.css
@@ -1,15 +1,14 @@
-@import url("https://api.fontshare.com/v2/css?f[]=zodiak@1,2&f[]=new-title@1&f[]=hind@1&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap");
+@import url("https://api.fontshare.com/v2/css?f[]=zodiak@1,2&display=swap");
+@import url("https://api.fontshare.com/v2/css?f[]=supreme@2,1&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Recursive:wght@300..1000&display=swap"); */
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @font-face {
-  font-family: Bueno;
-  src: url("/static/fonts/Bueno-Regular.ttf") format("ttf"),
-    url("/static/fonts/Bueno-Bold.ttf") format("ttf"),
-    url("/static/fonts/Bueno-Light.ttf") format("ttf");
+  font-family: Recursive;
+  src: url("/assets/Recursive_VF.woff2") format("woff2");
 }
 
 #index {
